	    4.0 and 4.1 release branches.
	  - Alpine Linux: Remove 3.15, 3.16 and 3.17. Add 3.19, 3.20,
	    3.21 and 3.22.
	  - Freebsd: Add 14.3 and replace 13.2 with 13.5.
	  - OpenBSD: Add 7.6 and 7.7. Remove 7.2 and 7.3.
	  - NetBSD: Add 10.1 and replace 9.3 with 9.4.
	- Update test 62_threads-ctx_new-deadlock.t to work with
	  LibreSSL 4.1.0.

1.94 2024-01-08
	- New stable release incorporating all changes from developer releases 1.93_01
	  to 1.93_05.
	- Summary of major changes since version 1.92:
	  - Net::SSLeay now officially supports all stable releases of OpenSSL 3.1 and
	    3.2, and LibreSSL 3.5 - 3.8.
	  - Many noisy compiler warnings have been silenced - if SSLeay.xs fails to
	    compile, it should now be much easier to identify the cause.
	  - libcrypto's OPENSSL_init_crypto() function and libssl's OPENSSL_init_ssl()
	    function are now exposed, enabling fine-grained control over the
	    initialisation and configuration of both libraries.
	  - libssl functions implementing TLS 1.3 PSK authentication are now exposed,
	    in particular SSL_CTX_set_psk_find_session_callback() (on the server side)
	    and SSL_CTX_set_psk_use_session_callback() (on the client side).
	  - libssl functions implementing server-side TLS 1.2 PSK authentication are
	    now exposed, in particular SSL_CTX_set_psk_server_callback().
	  - libssl's SSL_CTX_set_client_hello_cb() function is now exposed, allowing a
	    TLS server to set a callback function that is executed when the server
	    processes a ClientHello message.
	  - Many more libcrypto/libssl constants and functions are now exposed; see the
	    release notes for the 1.93 developer releases for a full list.

1.93_05 2024-01-06
	- Remove support for automatic detection of libssl/libcrypto via pkg-config
	  with ExtUtils::PkgConfig if it is installed, due to the compiler and linker
	  options provided by pkg-config being used unconditionally (which is