@@ -232,5 +232,6 @@ t/local/64_ticket_sharing.t
 t/local/65_security_level.t
 t/local/65_ticket_sharing_2.t
 t/local/66_curves.t
+t/local/67_sigalgs.t
 t/local/kwalitee.t
 typemap
